Revert "Comments given by UUF"
This reverts commit 35e20b9967f2a26eab7f2ac298b7e4c3b157f268.

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/profile-details/profile-details.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/profile-details/profile-details.hbs
@@ -25,7 +25,7 @@
         </div>
     {{/if}}
 {{/if}}
-<form method="post" class="form-horizontal profile-form" action="?profile={{profile}}" id="{{profile}}-form">
+<form method="post" class="form-horizontal profile-form" action="?{{profile}}#{{profile}}" id="{{profile}}-form">
     {{#each uiEntries}}
         <div class="form-group">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
@@ -36,6 +36,5 @@
             </div>
         </div>
     {{/each}}
-    <input type="hidden" name="profile" value="{{profile}}" />
     <input id="btn-{{profile}}" class="btn btn-primary add-margin-bottom-3x" type="submit" value="Update" />
 </form>
