--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/groups/index.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/groups/index.hbs
@@ -26,7 +26,7 @@
                                 <span class="icon fw-stack">
                                     <i class="fw fw-add fw-helper fw-helper-circle-outline"></i>
                                 </span>
-                                        {{i18n "group.add.header"}}
+                                        {{i18n "groups.add.header"}}
                                     </a>
                                 </li>
                             </ul>
