--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/users/list.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/users/list.hbs
@@ -14,7 +14,7 @@
                     <span class="icon fw-stack">
                         <i class="fw fw-add fw-helper fw-helper-circle-outline"></i>
                     </span>
-                    Add User
+                    {{i18n "add.user.navbar"}}
                 </a>
             </li>
             <li>
@@ -22,7 +22,7 @@
                     <span class="icon fw-stack">
                         <i class="fw fw-add fw-helper fw-helper-circle-outline"></i>
                     </span>
-                    Import Users
+                    {{i18n "import.user.navbar"}}
                 </a>
             </li>
         </ul>
@@ -34,46 +34,49 @@
         <div class="page-header">
             <h1>{{i18n "overview.users"}}</h1>
         </div>
-        <form class="form-horizontal" method="post" id="filterListForm" action="?list#list">
+        <form class="form-horizontal" method="post" id="filterListForm">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
+                <input type="hidden" name="action" value="filter-list">
+                <input type="hidden" id="claim-uri" name="claim-uri" value="">
+                <input type="hidden" id="domain-name" name="domain-name" value="">
                 <div class="row">
                     <table class="table table-striped table-hover table-responsive list-table display responsive nowrap data-table" id="users-sample">
                         <thead class="block">
                         <tr class="sort-row">
                             <th class="content-fill no-sort"></th>
-                            <th>Username</th>
-                            <th>Status</th>
-                            <th>Groups</th>
-                            <th>Roles</th>
-                            <th class="no-sort"></th>
+                            <th>{{i18n "users.list.username"}}</th>
+                            <th>{{i18n "users.list.status"}}</th>
+                            <th>{{i18n "users.list.groups"}}</th>
+                            <th>{{i18n "users.list.roles"}}</th>
+                            <th class="no-sort">{{i18n "list.actions"}}</th>
                         </tr>
                         <tr class="filter-row-custom">
                             <th data-for="Type"></th>
                             <th data-for="Domain" class="text-filter"></th>
                             <th class="select-filter">
                                 <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                                    Filter By Claim
                                     <select class="form-control" id="claimSelector" onChange="getClaimUri()">
-                                        <option value=""></option>
+                                        <option value="">{{i18n "option.select.claim"}}</option>
                                         {{#each claimProfile}}
                                             <option name="claim-uri-{{claimURI}}" id="claim-uri-{{claimURI}}" value="{{claimURI}}">{{displayName}}</option>
                                         {{/each}}
                                     </select>
-                                    <input class="form-control" type="text" id="claim-filter" name="claim-filter" placeholder="Value"/>
+                                    {{#if claimValue}}
+                                        <input class="form-control" type="text" id="claim-filter" name="claim-filter" placeholder="Claim value" value="{{claimValue}}"/>
+                                    {{else}}
+                                        <input class="form-control" type="text" id="claim-filter" name="claim-filter" placeholder="Claim value"/>
+                                    {{/if}}
                                 </div>
                             </th>
                             <th data-for="Office" class="select-filter"></th>
                             <th data-for="Age" class="select-filter"></th>
                             <th>
-                                <select class="form-control" id="domainSelector" onChange="getDomain()">
+                                <select class="form-control" id="domainSelector" name="domainSelector" onChange="getDomain()">
                                     {{#each domains}}
                                         <option value={{this}}>{{this}}</option>
                                     {{/each}}
                                 </select>
                             </th>
-                            <input type="hidden" name="action" value="filter-list">
-                            <input type="hidden" id="claim-uri" name="claim-uri" value="">
-                            <input type="hidden" id="domain-name" name="domain-name" value="">
                             <th class="text-right content-fill text-left-on-grid-view no-wrap">
                                 <button class="btn btn-primary " type="submit">
                                     <i class="fw fw fw-search search-icon add-margin-right-1x"></i>
@@ -90,16 +93,7 @@
                                     <i class="fw fw-ring fw-stack-2x"></i>
                                     <i class="fw fw-delete fw-stack-1x"></i>
                                 </span>
-                                            Delete Selected
-                                        </a>
-                                    </li>
-                                    <li class="square">
-                                        <a class="btn square-element" data-toggle="modal" data-target="#modalDemo">
-                                <span class="icon fw-stack">
-                                    <i class="fw fw-ring fw-stack-2x"></i>
-                                    <i class="fw fw-edit fw-stack-1x"></i>
-                                </span>
-                                            Edit Selected
+                                            {{i18n "bulk.action.delete"}}
                                         </a>
                                     </li>
                                 </ul>
@@ -110,14 +104,14 @@
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                                                <h4 class="modal-title" id="myModalLabel">Edit Selected</h4>
+                                                <h4 class="modal-title" id="myModalLabel">{{i18n "bulk.action.edit"}}</h4>
                                             </div>
                                             <div class="modal-body">
-                                                You about perform a bulk operation, please confirm to proceed.
+                                                {{i18n "bulk.action.confirm"}}
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                <button type="button" class="btn btn-primary">Save changes</button>
+                                                <button type="button" class="btn btn-primary">{{i18n "bulk.action.save"}}</button>
                                             </div>
                                         </div>
                                     </div>
