--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/groups/add.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/groups/add.hbs
@@ -5,7 +5,7 @@
 {{fragment "org.wso2.carbon.uuf.common.foundation.ui.uuf-client"}}
 {{fragment "org.wso2.carbon.uuf.common.foundation.ui.jquery-validation"}}
 {{css "css/admin-portal.css"}}
-{{js "js/add.js"}}
+{{js "js/add-group.js"}}
 
 {{#fillZone "content"}}
 
@@ -62,6 +62,27 @@
             <div class="tab-pane active" id="general">
                 <div class="col-md-12">
                     <form class="form-horizontal" role="form" method="post" id="addGroupForm">
+                        {{#if errorMessage}}
+                            <div class="alert alert-danger" role="alert">
+                                <i class="icon fw fw-error"></i><strong>{{i18n "group.add.error.default"}}</strong>&nbsp;
+                                {{i18n errorMessage}}
+                                <button type="button" class="close" aria-label="close" data-dismiss="alert">
+                                        <span aria-hidden="true">
+                                            <i class="fw fw-cancel"></i>
+                                        </span>
+                                </button>
+                            </div>
+                        {{else if addGroupResult}}
+                            <div class="alert alert-success" role="alert">
+                                <i class="icon fw fw-success"></i><strong>{{i18n "group.added.successfully.default"}}</strong>
+                                <button type="button" class="close" aria-label="close" data-dismiss="alert">
+                <span aria-hidden="true">
+                    <i class="fw fw-cancel"></i>
+                </span>
+                                </button>
+                            </div>
+                        {{/if}}
+
                         {{#if domainNames}}
                             <div class="form-group">
                                 <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
@@ -82,7 +103,8 @@
                             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
                                 <label for="input-groupname" class="control-label">{{i18n "groups.name"}}
                                     <span class="requiredAstrix"> *</span></label>
-                                <input class="form-control" name="input-groupname" id="input-groupname" placeholder="Group Name" type="text">
+                                <input class="form-control" name="input-groupname" id="input-groupname"
+                                       placeholder="Group Name" type="text">
                                 {{#defineZone "groupExistsError-area"}}
                                     <div id="groupExistsError">
                                         <!-- Here is generated content for error when group already exists -->
@@ -94,7 +116,8 @@
                             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
                                 <label for="input-description" class="control-label">{{i18n "groups.description"}}
                                 </label>
-                                <input class="form-control" name="input-description" id="input-description" placeholder="Group Description"
+                                <input class="form-control" name="input-description" id="input-description"
+                                       placeholder="Group Description"
                                        type="text">
                             </div>
                         </div>
@@ -115,7 +138,8 @@
                         <form class="form-horizontal" method="post" id="filterListForm" action="?list#list">
                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
                                 <div class="row">
-                                    <table class="table table-striped table-hover table-responsive list-table display responsive nowrap data-table" id="users-sample">
+                                    <table class="table table-striped table-hover table-responsive list-table display responsive nowrap data-table"
+                                           id="users-sample">
                                         <thead class="block">
                                         <tr class="sort-row">
                                             <th class="content-fill no-sort"></th>
@@ -131,13 +155,17 @@
                                             <th class="select-filter">
                                                 <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                                     Filter By Claim
-                                                    <select class="form-control" id="claimSelector" onChange="getClaimUri()">
+                                                    <select class="form-control" id="claimSelector"
+                                                            onChange="getClaimUri()">
                                                         <option value=""></option>
                                                         {{#each claimProfile}}
-                                                            <option name="claim-uri-{{claimURI}}" id="claim-uri-{{claimURI}}" value="{{claimURI}}">{{displayName}}</option>
+                                                            <option name="claim-uri-{{claimURI}}"
+                                                                    id="claim-uri-{{claimURI}}"
+                                                                    value="{{claimURI}}">{{displayName}}</option>
                                                         {{/each}}
                                                     </select>
-                                                    <input class="form-control" type="text" id="claim-filter" name="claim-filter" placeholder="Value"/>
+                                                    <input class="form-control" type="text" id="claim-filter"
+                                                           name="claim-filter" placeholder="Value"/>
                                                 </div>
                                             </th>
                                             <th data-for="Office" class="select-filter"></th>
@@ -163,7 +191,8 @@
 
                                                 <ul class="tiles">
                                                     <li class="square">
-                                                        <a class="btn square-element" data-click-event="delete-selected-rows">
+                                                        <a class="btn square-element"
+                                                           data-click-event="delete-selected-rows">
                                 <span class="icon fw-stack">
                                     <i class="fw fw-ring fw-stack-2x"></i>
                                     <i class="fw fw-delete fw-stack-1x"></i>
@@ -172,7 +201,8 @@
                                                         </a>
                                                     </li>
                                                     <li class="square">
-                                                        <a class="btn square-element" data-toggle="modal" data-target="#modalDemo">
+                                                        <a class="btn square-element" data-toggle="modal"
+                                                           data-target="#modalDemo">
                                 <span class="icon fw-stack">
                                     <i class="fw fw-ring fw-stack-2x"></i>
                                     <i class="fw fw-edit fw-stack-1x"></i>
@@ -183,19 +213,28 @@
                                                 </ul>
 
                                                 <!-- Modal -->
-                                                <div class="modal fade" id="modalDemo" tabindex="-1" role="dialog" aria-labelledby="modalDemo">
+                                                <div class="modal fade" id="modalDemo" tabindex="-1" role="dialog"
+                                                     aria-labelledby="modalDemo">
                                                     <div class="modal-dialog" role="document">
                                                         <div class="modal-content">
                                                             <div class="modal-header">
-                                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                                                                <h4 class="modal-title" id="myModalLabel">Edit Selected</h4>
+                                                                <button type="button" class="close" data-dismiss="modal"
+                                                                        aria-label="Close"><span
+                                                                        aria-hidden="true">×</span></button>
+                                                                <h4 class="modal-title" id="myModalLabel">Edit
+                                                                    Selected</h4>
                                                             </div>
                                                             <div class="modal-body">
-                                                                You about perform a bulk operation, please confirm to proceed.
+                                                                You about perform a bulk operation, please confirm to
+                                                                proceed.
                                                             </div>
                                                             <div class="modal-footer">
-                                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                                <button type="button" class="btn btn-primary">Save changes</button>
+                                                                <button type="button" class="btn btn-default"
+                                                                        data-dismiss="modal">Close
+                                                                </button>
+                                                                <button type="button" class="btn btn-primary">Save
+                                                                    changes
+                                                                </button>
                                                             </div>
                                                         </div>
                                                     </div>
