--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/recovery/forced-password-reset.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/recovery/forced-password-reset.hbs
@@ -34,7 +34,7 @@
                             </div>
                             <div class="col-md-6 pw">
                                 <input class="form-control" name="newPassword" id="newPassword"
-                                       data-schemaformat="password" disabled="disabled" type="hidden">
+                                       data-schemaformat="password" type="hidden">
                             </div>
                             <div class="col-md-6">
                                 <input class="btn btn-default" name="generatePassword" id="generatePassword"
