--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/profile-image/profile-image.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/profile-image/profile-image.hbs
@@ -1,5 +1,5 @@
 {{fragment "org.wso2.carbon.uuf.common.foundation.ui.jquery-validation"}}
-{{js "js/profile.js"}}
+{{js "js/profile-image.js"}}
 <form method="post" id="image-uploader" class="form-horizontal" action="?image" enctype="multipart/form-data">
     <div class="form-group">
         <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
