--- a/portal/apps/org.wso2.carbon.iam.portal.common/src/main/fragments/profile/profile.hbs
+++ b/portal/apps/org.wso2.carbon.iam.portal.common/src/main/fragments/profile/profile.hbs
@@ -6,7 +6,7 @@
     {{#if message}}
         <div class="alert alert-success" role="alert">
             <i class="icon fw fw-success"></i><strong>{{i18n "profile.success"}}</strong>
-            {{message}}
+            {{i18n message}}
             <button type="button" class="close" aria-label="close" data-dismiss="alert">
                 <span aria-hidden="true">
                     <i class="fw fw-cancel"></i>
@@ -18,7 +18,7 @@
     {{#if message}}
         <div class="alert alert-danger" role="alert">
             <i class="icon fw fw-error"></i><strong>{{i18n "profile.failure"}}</strong>
-            {{message}}
+            {{i18n message}}
             <button type="button" class="close" aria-label="close" data-dismiss="alert">
                 <span aria-hidden="true">
                     <i class="fw fw-cancel"></i>
