Code Review Suggestions

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/reset/forced-password-reset.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/reset/forced-password-reset.hbs
@@ -18,7 +18,7 @@
                     </label>
                     <select class="form-control" id="verificationSelector"
                             data-primary={{i18n "recovery.reset.select.with.reset.link"}}>
-                        <option>{{i18n "recovery.reset.select.with.offline.OTP"}}</option>
+                        <option>{{i18n "recovery.reset.select.with.offline.passcode"}}</option>
                         <option>{{i18n "recovery.reset.select.with.email.OTP"}}</option>
                         <option>{{i18n "recovery.reset.select.with.reset.link"}}</option>
                     </select>
