--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/password-generation/password-generation.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/password-generation/password-generation.hbs
@@ -10,6 +10,10 @@
                     <div class="col-md-6">
                         <input type="password" name="newPassword" id="newPassword" class="form-control"
                                required data-schemaformat="password" placeholder="Password"/>
+                            <div id="passwordValidationError" style="display: none;">
+                                <label id="passwordValidation-error" class="error" for="passwordValidation-error">
+                                    {{i18n "user.add.password.validate.error"}}</label>
+                            </div>
                         <div id="password_strength_wrap">
                             <div class="pwd_str">
                                 <div id="passwordDescription">Password not entered</div>
@@ -30,10 +34,10 @@
                             </div><!-- END pswd_info -->
                         </div><!-- END pwd_strength_wrap -->
                     </div>
-                    <div class="col-md-6">
+                    <!--<div class="col-md-6">
                         <input class="btn btn-primary" type="button" name="generatePassword"
                                id="generatePassword" value="Generate Password" onclick="generateNewPassword()"/>
-                    </div>
+                    </div>-->
                 </div>
 
                 <div class="form-group">
