--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/users/add.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/users/add.hbs
@@ -8,6 +8,28 @@
 {{js "js/add.js"}}
 
 {{#fillZone "content"}}
+    {{#if message}}
+        <div class="alert alert-success" role="alert">
+            <i class="icon fw fw-success"></i><strong>{{i18n "user.add.success"}}</strong>
+            <span>{{i18n message}}</span>
+            <button type="button" class="close" aria-label="close" data-dismiss="alert">
+                <span aria-hidden="true">
+                    <i class="fw fw-cancel"></i>
+                </span>
+            </button>
+        </div>
+    {{/if}}
+    {{#if errorMessage}}
+        <div class="alert alert-danger" role="alert">
+            <i class="icon fw fw-error"></i><strong>{{i18n "user.add.failure"}}</strong>
+            <span>{{i18n errorMessage}}</span>
+            <button type="button" class="close" aria-label="close" data-dismiss="alert">
+            <span aria-hidden="true">
+                <i class="fw fw-cancel"></i>
+            </span>
+            </button>
+        </div>
+    {{/if}}
     <div class="body-wrapper">
         <div class="page-header">
             <h1>{{i18n "users.add.header"}}</h1>
