--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/users/edit.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/users/edit.hbs
@@ -43,36 +43,8 @@
                         <div class="panel-body">
                             <div class="tab-content">
                                 <div class="tab-pane fade in active" id="editProfile">
-                                    <div>
-                                        <!-- page content -->
-                                        <br class="settings-content">
-
-                                        {{fragment "org.wso2.carbon.iam.portal.common.profile-image" profileName=this
-                                                       actionId=actionId}}
-
-                                        <br>
-                                        <div id="profile-details">
-                                            <select class="selectpicker" id="profileSelector">
-                                                {{#each profiles}}
-                                                     <option id="option-profile" action="{{this}}-profile-action" value="{{this}}">{{this}}</option>
-                                                {{/each}}
-                                            </select>
-                                            <br><br>
-                                            {{#defineZone "veiwProfileArea"}}
-                                                <div id="veiwProfileArea" class="veiwProfileArea">
-                                                    <!-- Here is generated content for erro when user already exists -->
-                                                {{#each profiles}}
-                                                    <div id="{{this}}-form" class="{{this}} optionBox">
-                                                        {{fragment "org.wso2.carbon.iam.portal.common.profile-details"
-                                                                   profileName=this   actionId=actionId}}
-                                                    </div>
-                                                {{/each}}
-
-                                                </div>
-                                            {{/defineZone}}
-
-                                         </div>
-                                    </div>
+                                    <!-- The all-profile fragment is loaded-->
+                                    {{fragment "org.wso2.carbon.iam.portal.common.all-profiles"}}
                                 </div>
                                 <div class="tab-pane " id="editGroups">
                                     <div>
