UI changes after review

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/users/list.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/users/list.hbs
@@ -86,9 +86,9 @@
                         <tr class="bulk-action-row" id="bulk-row">
                             <th colspan="8">
 
-                                <ul class="tiles">
+                                <ul class="tiles" disabled>
                                     <li class="square">
-                                        <a class="btn square-element bulk-element" data-click-event="delete-selected-rows">
+                                        <a class="btn square-element bulk-element-delete" data-click-event="delete-selected-rows" >
                                 <span class="icon fw-stack">
                                     <i class="fw fw-ring fw-stack-2x"></i>
                                     <i class="fw fw-delete fw-stack-1x"></i>
@@ -97,7 +97,7 @@
                                         </a>
                                     </li>
                                     <li class="square">
-                                        <a class="btn square-element bulk-element" data-click-event="lock-selected-rows">
+                                        <a class="btn square-element bulk-element-lock" data-click-event="lock-selected-rows">
                                 <span class="icon fw-stack">
                                     <i class="fw fw-ring fw-stack-2x"></i>
                                     <i class="fw fw-lock fw-stack-1x"></i>
@@ -106,7 +106,7 @@
                                         </a>
                                     </li>
                                     <li class="square">
-                                        <a class="btn square-element bulk-element" data-click-event="disable-selected-rows">
+                                        <a class="btn square-element bulk-element-disable" data-click-event="disable-selected-rows">
                                 <span class="icon fw-stack">
                                     <i class="fw fw-ring fw-stack-2x"></i>
                                     <i class="fw fw-disable fw-stack-1x"></i>
@@ -115,7 +115,7 @@
                                         </a>
                                     </li>
                                     <li class="square">
-                                        <a class="btn square-element bulk-element" data-click-event="activate-selected-rows">
+                                        <a class="btn square-element bulk-element-activate" data-click-event="activate-selected-rows">
                                 <span class="icon fw-stack">
                                     <i class="fw fw-ring fw-stack-2x"></i>
                                     <i class="fw fw-activate fw-stack-1x"></i>
