--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/users/list.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/users/list.hbs
@@ -160,7 +160,7 @@
 
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">{{i18n "modal.close"}}</button>
                                     </div>
                                 </div>
                             </div>
